add readme details

--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 		<script type="text/javascript" src="js/script.js"></script>
 	</head>
 	<body>
-		<p>Let the game begin!</p>
+		<div class="container-fluid">
+			
+		</div>
 		<script type="text/javascript"></script>
 	</body>
 </html>
