--- a/index.html
+++ b/index.html
@@ -13,7 +13,19 @@
 	</head>
 	<body>
 		<div class="container-fluid">
-			
+			<div class="jumbotron">
+				<h1>Pig Dice Game</h1>
+			</div>
+			<div class="row">
+				<div class="col-md-4"></div>
+				<div class="col-md-4">
+						<div id="rollResult"></div>
+						<button type="button" class="btn btn-info" id="roll">Roll</button>
+						<br>
+						<button type="button" class="btn btn-info" id="hold">Hold</button>
+				</div>
+				<div class="col-md-4"></div>
+			</div>
 		</div>
 		<script type="text/javascript"></script>
 	</body>
