--- a/index.html
+++ b/index.html
@@ -13,20 +13,44 @@
 	</head>
 	<body>
 		<div class="container-fluid">
+			<br>
 			<div class="jumbotron">
 				<h1>Pig Dice Game</h1>
 			</div>
 			<div class="row">
-				<div class="col-md-4"></div>
 				<div class="col-md-4">
-						<div id="rollResult"></div>
-						<button type="button" class="btn btn-info" id="roll">Roll</button>
-						<br>
-						<button type="button" class="btn btn-info" id="hold">Hold</button>
+					<div class="panel">
+						<div class="panel-body">
+							<h2>Player 1</h2>
+							<hr>
+							<div id="player1-score">0</div>
+						</div>
+					</div>
 				</div>
-				<div class="col-md-4"></div>
+				<div class="col-md-4">
+					<div class="panel">
+						<div class="panel-body">
+						<h2>This Turn: </h2>
+						<hr>
+						<div id="roll-result">This roll result: </div>
+						<div id="running-total">Running total: </div>
+						<button type="button" class="btn btn-success" id="roll">Roll</button>
+						<br>
+						<button type="button" class="btn btn-danger" id="hold">Hold</button>
+					</div>
+					</div>
+				
+					</div>
+				<div class="col-md-4">
+					<div class="panel">
+						<div class="panel-body">
+							<h2>Player 2</h2>
+							<hr>
+							<div id="player2-score">0</div>
+						</div>
+					</div>
+				</div>
 			</div>
 		</div>
-		<script type="text/javascript"></script>
 	</body>
 </html>
