add output style and clean up js file

--- a/index.html
+++ b/index.html
@@ -37,8 +37,11 @@
 					<div class="panel-body">
 						<h2>This Turn: </h2>
 						<hr>
-						<div id="roll-result">This roll result: </div>
-						<div id="running-total">Running total: </div>
+						<h1><div id="roll-result">0</div></h1>
+						<small>YOUR ROLL</small>
+						<h1><div id="running-total">0</div></h1>
+						<small>RUNNING TOTAL</small>
+						<br>
 						<button type="button" class="btn btn-success" id="roll">Roll</button>
 						<br>
 						<button type="button" class="btn btn-danger" id="hold">Hold</button>
